--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -78,3 +78,4 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/components/menu.sass";
 @import "~/node_modules/bulma/sass/components/dropdown.sass";
 @import "~/node_modules/bulma/sass/components/card.sass";
+@import "~/node_modules/bulma/sass/helpers/_all.sass";
