working on image sub-component. mapping thumbnails ok, but struggling with resizing the image to fit container correctly

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -143,3 +143,4 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/components/dropdown.sass";
 @import "~/node_modules/bulma/sass/components/card.sass";
 @import "~/node_modules/bulma/sass/helpers/_all.sass";
+@import "~/node_modules/bulma/sass/elements/image.sass";
