ready to implement context api

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -131,6 +131,7 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/components/navbar.sass";
 @import "~/node_modules/bulma/sass/layout/hero.sass";
 @import "~/node_modules/bulma/sass/layout/section.sass";
+@import "~/node_modules/bulma/sass/elements/progress.sass";
 
 // Jack is using tiles, columns
 @import "~/node_modules/bulma/sass/grid/columns.sass";
