--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -142,3 +142,5 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/components/card.sass";
 @import "~/node_modules/bulma/sass/helpers/_all.sass";
 @import "~/node_modules/bulma/sass/elements/image.sass";
+
+@import "~/node_modules/bulma/sass/components/level.sass";
