cleaned up overview using tiles and working on modal dimensions

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -151,3 +151,22 @@ $tile-spacing: 0;
   display: flex;
   align-items: center;
 }
+.iframe-modal {
+  width: 800px;
+  height: 600px;
+}
+.iframe-container {
+  overflow: hidden;
+  /* 16:9 aspect ratio */
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
