Related Products - Added Modal - Need to add actual data for component.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -142,3 +142,6 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/components/card.sass";
 @import "~/node_modules/bulma/sass/helpers/_all.sass";
 @import "~/node_modules/bulma/sass/elements/image.sass";
+
+// Joe needed the modal
+@import "~/node_modules/bulma/sass/components/modal.sass";
