--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -228,6 +228,13 @@ $tile-spacing: 0;
 // Ryne
 @import "~/node_modules/bulma/sass/components/level.sass";
 
+
+// Bulma essential variables, functions and mixins
+@import "~/node_modules/bulma/sass/utilities/initial-variables";
+@import "~/node_modules/bulma/sass/utilities/functions";
+@import "~/node_modules/bulma/sass/utilities/derived-variables";
+@import "~/node_modules/bulma/sass/utilities/mixins.sass";
+
 .is-clickable {
   cursor: pointer;
 }
@@ -240,13 +247,58 @@ $tile-spacing: 0;
   height: 600px;
 }
 .fixed-container {
+    display: flex;
     position: relative;
     width: 100%;
     height: 100%;
+    margin: 1rem;
+}
+.fixed-container .left {
+    position: absolute;
+    // vertical-align: top;
+    top: 50%;
+    left: 0%;
+    transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 32px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    // transform: rotate(135deg);
+    // -webkit-transform: rotate(135deg);
 }
 
+.fixed-container .right {
+    position: absolute;
+    // vertical-align: top;
+    top: 50%;
+    right: 0%;
+    transform: translate(50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 32px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    // transform: rotate(135deg);
+    // -webkit-transform: rotate(135deg);
+}
+.fixed-container .left:hover {
+    background-color: black;
+}
+.fixed-container .right:hover {
+    background-color: black;
+}
 .image-container {
-  object-fit: contain;
+  object-fit: cover;
+}
+
+.image-fit {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url();
 }
 // .image-zoom {
 //   transform: scale(2.5);
@@ -277,11 +329,7 @@ $tile-spacing: 0;
   text-decoration:line-through;
 }
 
-// Bulma essential variables, functions and mixins
-@import "~/node_modules/bulma/sass/utilities/initial-variables";
-@import "~/node_modules/bulma/sass/utilities/functions";
-@import "~/node_modules/bulma/sass/utilities/derived-variables";
-@import "~/node_modules/bulma/sass/utilities/mixins.sass";
+
 
 // Modal minimal setup
 $transition-duration: .5s;
