--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -242,17 +242,29 @@ $tile-spacing: 0;
   display: flex;
   align-items: center;
 }
-.iframe-modal {
-  width: 800px;
-  height: 600px;
+// .iframe-modal {
+//   width: 800px;
+//   height: 600px;
+// }
+.fixed-parent {
+
+    position: relative;
+    align-items: center;
+    width: 80%;
+    height: 50&;
 }
 .fixed-container {
-    display: flex;
+    //display: flex;
+    //align-items: center;
     position: relative;
     width: 100%;
     height: 100%;
-    margin: 1rem;
+    //margin: 1rem;
 }
+
+.image-container {
+    object-fit: cover;
+  }
 .fixed-container .left {
     position: absolute;
     // vertical-align: top;
@@ -268,6 +280,27 @@ $tile-spacing: 0;
     // transform: rotate(135deg);
     // -webkit-transform: rotate(135deg);
 }
+.fixed-thumb {
+    position:relative;
+    width: 64px;
+    height: 64px;
+}
+.thumbs {
+    object-fit: cover;
+}
+.thumb-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+.thumb-image {
+    object-fit: cover;
+    flex: 1;
+    //margin: 1rem;
+    overflow: hidden;
+    height: 64px;
+}
+
 
 .fixed-container .right {
     position: absolute;
@@ -290,9 +323,7 @@ $tile-spacing: 0;
 .fixed-container .right:hover {
     background-color: black;
 }
-.image-container {
-  object-fit: cover;
-}
+
 
 .image-fit {
   background-size: cover;
