--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -64,7 +64,7 @@ $input-border-color: transparent;
 $input-shadow: none;
 
 //container offset
-$gap: 200px;
+$gap: 100px;
 $container-offset: (2 * $gap);
 // tile-spacing
 $tile-spacing: 0;
@@ -235,6 +235,15 @@ $tile-spacing: 0;
 @import "~/node_modules/bulma/sass/utilities/derived-variables";
 @import "~/node_modules/bulma/sass/utilities/mixins.sass";
 
+
+// Modal minimal setup
+$transition-duration: .5s;
+$transition-duration-newsPaper: .7s;
+$transition-duration-3dslit: 1s;
+
+$modal-perspective: 1300px;
+$modal-bg-color: rgba($black,.86);
+
 .is-clickable {
   cursor: pointer;
 }
@@ -246,12 +255,20 @@ $tile-spacing: 0;
 //   width: 800px;
 //   height: 600px;
 // }
-.fixed-parent {
+// .fixed-parent {
 
-    position: relative;
+//     position: relative;
+//     align-items: center;
+//     width: 80%;
+//     height: 50&;
+// }
+.fixed-parent {
+    display: flex;
     align-items: center;
-    width: 80%;
-    height: 50&;
+    //position: relative;
+    width: 100%;
+    height: 100%;
+    //margin: 1rem;
 }
 .fixed-container {
     //display: flex;
@@ -264,6 +281,8 @@ $tile-spacing: 0;
 
 .image-container {
     object-fit: cover;
+    flex: 1;
+    overflow: hidden;
   }
 .fixed-container .left {
     position: absolute;
@@ -299,7 +318,19 @@ $tile-spacing: 0;
     //margin: 1rem;
     overflow: hidden;
     height: 64px;
+    width: 64px;
 }
+// .thumb-image:is-active {
+//     height: 10px;
+//     width: 10px;
+// }
+.selected {
+    // border: 5px solid blue;
+    // background-color: #555;
+    transform: scale(1.2);
+    opacity: 1;
+    transition: all $transition-duration;
+  }
 
 
 .fixed-container .right {
@@ -362,13 +393,7 @@ $tile-spacing: 0;
 
 
 
-// Modal minimal setup
-$transition-duration: .5s;
-$transition-duration-newsPaper: .7s;
-$transition-duration-3dslit: 1s;
 
-$modal-perspective: 1300px;
-$modal-bg-color: rgba($black,.86);
 .image-zoom {
   transform: scale(2.5);
   opacity: 1;
