--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -325,9 +325,9 @@ $modal-bg-color: rgba($black,.86);
 //     width: 10px;
 // }
 .selected {
-    // border: 5px solid blue;
+    border: 1px solid black;
     // background-color: #555;
-    transform: scale(1.2);
+    transform: scale(1.4);
     opacity: 1;
     transition: all $transition-duration;
   }
