final styling changes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -224,50 +224,71 @@ $transition-duration-3dslit: 1s;
 $modal-perspective: 1300px;
 $modal-bg-color: rgba($black,.86);
 
-.is-clickable {
-  cursor: pointer;
-}
 .is-vertical-center {
   display: flex;
   align-items: center;
 }
-// .iframe-modal {
-//   width: 800px;
-//   height: 600px;
-// }
-// .fixed-parent {
-
-//     position: relative;
-//     align-items: center;
-//     width: 80%;
-//     height: 50&;
-// }
-.fixed-parent {
+.overview-container {
     display: flex;
+    flex-grow: 1;
+    padding: 1em;
+    position: relative;
+    justify-content: center;
     align-items: center;
-    //position: relative;
-    width: 100%;
-    height: 100%;
-    //margin: 1rem;
+    max-height: calc(100vh - 100px);
+    max-width: calc(100vw - 200px);
+    // padding-left: 5vw;
+    // padding-right: 5vw;
+    margin: 0 auto
 }
 .fixed-container {
-    //display: flex;
-    //align-items: center;
     position: relative;
     width: 100%;
     height: 100%;
-    //margin: 1rem;
+    background-color: aliceblue;
 }
-
+.fixed-parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    max-width: 60%;
+    margin: auto
+}
+.fixed-container-image {
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: 80%;
+}
 .image-container {
     object-fit: cover;
     flex: 1;
     overflow: hidden;
-  }
-
-.fixed-container .left {
+}
+.fixed-container-thumbs {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 20%;
+}
+.fixed-thumb {
+    position:relative;
+    width: 64px;
+    height: 64px;
+    border: 1px solid black;
+}
+.thumbs {
+    object-fit: cover;
+}
+.left {
     position: absolute;
-    // vertical-align: top;
     top: 50%;
     left: 0%;
     transform: translate(-50%, -50%);
@@ -277,18 +298,22 @@ $modal-bg-color: rgba($black,.86);
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    // transform: rotate(135deg);
-    // -webkit-transform: rotate(135deg);
+}
+.right {
+    position: absolute;
+    top: 50%;
+    right: 0%;
+    transform: translate(50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 32px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
-.fixed-thumb {
-    position:relative;
-    width: 64px;
-    height: 64px;
-}
-.thumbs {
-    object-fit: cover;
-}
+
+
 .thumb-container {
     display: flex;
     flex-direction: row;
@@ -302,10 +327,7 @@ $modal-bg-color: rgba($black,.86);
     height: 64px;
     width: 64px;
 }
-// .thumb-image:is-active {
-//     height: 10px;
-//     width: 10px;
-// }
+
 .selected {
     border: 1px solid black;
     // background-color: #555;
@@ -315,21 +337,7 @@ $modal-bg-color: rgba($black,.86);
   }
 
 
-.fixed-container .right {
-    position: absolute;
-    // vertical-align: top;
-    top: 50%;
-    right: 0%;
-    transform: translate(50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 32px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    // transform: rotate(135deg);
-    // -webkit-transform: rotate(135deg);
-}
+
 .fixed-container .left:hover {
     background-color: black;
 }
